--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refferals-test",
+  "name": "referrals-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
